# safechat

./: .gitignore  README.md
backend/: .env.example  pyproject.toml  seed_keywords.py
backend/app/: main.py
backend/app/auth/: dependencies.py  router.py  schemas.py  service.py
backend/app/chat/: router.py  schemas.py
backend/app/core/: config.py
backend/app/logs/: router.py
backend/app/models/: __init__.py  conversation.py  safety.py  style.py  user.py
backend/app/safety/: filter.py  keyword_filter.py  model_filter.py  router.py
backend/app/styles/: router.py  schemas.py  seed.py
docs/compose/plans/: 2026-07-14-style-safety-assistant.md
docs/compose/specs/: 2026-07-14-style-safety-assistant-design.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
frontend/src/: main.tsx  router.tsx
frontend/src/components/: AvatarCropModal.tsx
frontend/src/components/ui/: card.tsx  input.tsx  pagination.tsx  select.tsx  separator.tsx
frontend/src/pages/: ChatPage.tsx  LoginPage.tsx  RegisterPage.tsx
frontend/src/pages/admin/: AdminLayout.tsx  AuditLogPage.tsx  DashboardPage.tsx  KeywordManagePage.tsx  StyleManagePage.tsx  StyleSwitchPage.tsx  UserManagePage.tsx
frontend/src/services/: api.ts
frontend/src/stores/: authStore.ts  chatStore.ts
frontend/src/styles/: globals.css
