[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "safechat"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.139.0",
    "uvicorn[standard]==0.50.0",
    "sqlalchemy[asyncio]==2.0.51",
    "asyncpg==0.31.0",
    "alembic==1.18.5",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.2",
    "pyjwt==2.13.0",
    "bcrypt==5.0.0",
    "httpx==0.28.1",
    "python-multipart==0.0.32",
    "sse-starlette==3.4.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
